# src/modules/core/payouts/dto/save-payout.dto.ts
@@ -1,0 +1,8 @@
+import { IsString, Matches } from 'class-validator';
+import { CalculatePayoutDto } from './calculate-payout.dto';
+
+export class SavePayoutDto extends CalculatePayoutDto {
+  @IsString()
+  @Matches(/^[a-f0-9]{64}$/)
+  previewToken: string;
+}
